# scikit-maad-biosound

./: .gitignore  CLAUDE.md  Makefile  README.md  SciKit_Maad_File_Processing-GUI.py  SciKit_Maad_File_Processing-GUI_16kHz_SR.py  SciKit_Maad_FullBW_Spectral_Indices.py  generate_samples.py  main.py  performance_test.py  pyproject.toml  test_basic.py  test_gui_integration.py  test_gui_logic.py  test_gui_params.py  test_marine_indices.py
archive/: SciKit_Maad_File_Processing-GUI_16kHz_SR_Spectral_Indices.py
archive/original/: SciKit_Maad_File_Processing-GUI.py
archive/v1_original/: SciKit_Maad_File_Processing-GUI_16kHz_SR.py
notes/: input-validation-patterns.md  makefile-guide.md  note_for_existing_users.md  pr-review-fixes-plan.md
scripts/: DEFAULTS_UPDATED.md  compare_old_vs_new.py  compare_regression_results.py  compare_versions.py  explain_frequency_bands.py  test_fixed_marine_indices.py  test_fixed_results.csv  test_gui_improvements.py  test_leqf_sensitivity.py  test_scikit_maad_defaults.py  validate_calculations.py
src/: __init__.py
src/gui/: __init__.py  debug_config.py  main_gui.py
src/processing/: __init__.py  core_processing.py  performance_comparison_report.py  performance_reports.py  standalone_processor.py
src/utils/: debug_utils.py  input_validation.py  run_metadata.py  sample_generator.py
tests/: test_suite.py
tests/test_data/test_utils/: generate_test_wav.py
tests/test_gui/: test_basic.py  test_gui_integration.py  test_gui_logic.py  test_gui_marine_integration.py  test_gui_params.py  test_marine_calculations.py  test_marine_indices.py  test_parallel_integration.py  test_parallel_performance.py
tests/test_processing/: test_backwards_compatibility.py  test_gui_parameters.py  test_integration.py  test_marine_acoustics.py  test_parallel_processing.py
